  messages are converted to the console code page encoding, the property
  doesn't affect non Windows OS.
  
- Added IceUtil::nativeToWnative and IceUtil::wnativeToNative functions
  which allow to convert between narrow and wide strings, stringToWstring
  and wstringToString have been deprecated.

- Added ice_staticId() to the ProxyHandle template.


C# Changes
==========

- Most Slice data types now support .NET serialization, which allows
  Ice exceptions to cross AppDomain boundaries. The only limitation is
  that data members whose types are proxies cannot be serialized;
  these members will be set to null after deserialization.

- It is now possible for users to provide a base class for a Slice
  generated class with .NET partial classes.

- Fixed leak in C# transport. The leak occured for each Ice
  connection.
  

Python Changes
==============

- Changed the semantics of Ice.Unset so that it evaluates as false in
  a boolean context.

- Fixed a bug in the Slice-to-Python translator that eliminates the
  use of implicit relative imports for nested Slice modules.

- Added ice_staticId() to generated proxy classes.
  

Ruby Changes
============

- Added ice_staticId() to generated proxy classes.
  

PHP Changes
===========

- Added ice_staticId() to generated proxy helper classes.

- Generated interfaces now extend the Object base interface.

- Added ObjectPrxHelper class.


======================================================================
Changes since version 3.5.0
======================================================================


General Changes
===============

- Moved instructions for building a source distribution to the Ice
  manual. See the section "Building Ice from Source" in the Release
  Notes.

- It's now possible to install an instrumentation observer with the
  communicator initialization data structure and still have the
  metrics administrative facet enabled. Previously, installing an
  observer would disable the metrics facet.
