@@ -176,6 +176,13 @@ C++ Changes
 C# Changes
 ==========
 
+- The Ice.Communicator type now implements IDisposable, which allows
+  communicator objects to be used as resources in using() statements.
+
+- Added the metadata tag "clr:implements:Base", which adds the
+  specified base type to the generated code for a Slice structure,
+  class or interface.
+
 - Most Slice data types now support .NET serialization, which allows
   Ice exceptions to cross AppDomain boundaries. The only limitation is
   that data members whose types are proxies cannot be serialized;
